# prime_albertina_zhenaya

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/prime_zea2107/: __init__.py  prime_zea2107.py
tests/: test_prime_zea2107.py
