[tool.poetry]
name = "prime_zea2107"
version = "0.1.0"
description = "python package that supplies simple mathematical functions"
authors = ["Zhenaya Albertina"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.0"
pandas = "2.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
